# xc1-save-editor-cpp

./: CMakeLists.txt  CMakeSettings.json  README.md  tests.cc
.github/workflows/: cmake-multi-platform.yml
gui/: mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow.ui.autosave
include/: ArrayID.h  ArrayObject.h  DataObject.h  QExtendedWidget.h  SaveConfig.h  SaveDefines.h  SaveFieldID.h  SaveFile.h  Types.h
src/: ArrayObject.cpp  DataObject.cpp  SaveFile.cpp  Types.cpp  main.cpp  tests.cc
